[package]
name = "oxidizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.17.3"
phf = { version = "0.11.2", features = ["macros"] }
windows = { version = "0.52.0", features = ['Win32_UI_Input_KeyboardAndMouse'] }