[package]
name = "oxidizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.17.3"
phf = { version = "0.11.2", features = ["macros"] }
eframe = "0.24.0"
egui = "0.24.0"
egui_plot = "0.24.0"
env_logger = "0.10"
lazy_static = "1.4.0"
strum = "0.25.0"
strum_macros = "0.25.3"

[dev-dependencies]
tinyaudio = "0.1.2"

[[example]]
name = "simple_test"